@@ -10,7 +10,7 @@
   <configure name="LIB_VERSION" value="0x662"/>
   <configure name="LIB_VERSION_NUMBER" value="6,6,2,8"/>
   <configure name="RELEASE_DATE" value="2010-06-22"/>
-  <configure name="CONFIGURE" value="./configure "/>
+  <configure name="CONFIGURE" value="./configure  '--without-magick-plus-plus'"/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
   <configure name="VERSION" value="6.6.2"/>
